--- a/MyDemo/inject/build.gradle
+++ b/MyDemo/inject/build.gradle
@@ -26,8 +26,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
 
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    provided 'javax.annotation:jsr250-api:1.0' // Java标注
 
+    //butterknife
+    compile 'com.jakewharton:butterknife:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+    //dagger
     def Dagger2_Version = '2.2'
     compile "com.google.dagger:dagger:$Dagger2_Version"
     apt "com.google.dagger:dagger-compiler:$Dagger2_Version"
